<resources>
    <string name="app_name">PocketWeibo</string>
    <string name="nav_open">Navigation open</string>
    <string name="nav_close">Navigation close</string>

    <string name="nav_menu_profile">个人信息</string>
    <string name="nav_menu_settings">设置</string>
    <string name="pocket_weibo">Pocket Weibo</string>
    <string name="auth_log_in">登录</string>
    <string name="authority_success">授权成功</string>
    <string name="authority_failed">授权失败</string>
    <string name="linkTextView_more">更多</string>
    <string name="weibo_item_reposts">转发</string>
    <string name="weibo_item_comment">评论</string>
    <string name="weibo_item_likes">喜欢</string>
    <string name="weibo_item_from">来自</string>
    <string name="save_post">收藏</string>
    <string name="unsave_post">取消收藏</string>
    <string name="unfollow">取消关注</string>
    <string name="follow">关注</string>
    <string name="remove_from_favorite">成功删除收藏</string>
    <string name="add_to_favorite">成功收藏</string>
    <string name="unfollow_success">成功取消关注</string>
    <string name="follow_success">关注成功</string>
    <string name="web_error">Web error</string>
    <string name="refresh_weibo">刷新微博</string>
    <string name="followers">粉丝</string>
    <string name="following">关注</string>
    <string name="save_file_success">成功保存文件</string>
    <string name="save_file_failed">保存文件失败</string>
    <string name="start_download_picture">开始下载图片</string>
    <string name="permission_denied">授权失败</string>
    <string name="refresh_userdata_failed">刷新用户信息失败</string>
    <string name="refresh_weibo_failed">刷新微博失败</string>
    <string name="share_weibo">分享微博</string>
    <string name="comment">评论</string>
    <string name="operation_failed">操作失败</string>
    <string name="operation_success">操作成功</string>
    <string name="account_manager">账号管理</string>
    <string name="push_service">通知推送</string>
    <string name="image_on_lte">流量下不加载图片</string>
    <string name="about">关于</string>
    <string name="Logout">注销</string>
    <string name="saveWeiboDataFailed">保存微博数据失败</string>
    <string name="save_userdata_failed">保存用户信息失败</string>
    <string name="comment_failed">评论失败</string>
    <string name="commentSuccess">评论成功</string>
    <string name="api_limit_get_weibo_failed">接口限制，无法获取微博信息</string>
    <string name="no_new_weibo">没有新的微博</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="api_limit">API限制，无法获取非授权用户微博</string>

</resources>
