<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/secondBackground">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/nav_menu_settings">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ripple_menu"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/push_service"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="?attr/weiboTextColor"
            android:textSize="15sp"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/switch_service"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ripple_menu"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/image_on_lte"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textColor="?attr/weiboTextColor"
            android:textSize="15sp"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/switch_image"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textView_about"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:background="@drawable/ripple_menu"
        android:text="@string/about"
        android:textColor="?attr/weiboTextColor"
        android:textSize="15sp"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ripple_menu"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/Logout"
        android:textColor="?attr/weiboTextColor"
        android:textSize="15sp" />
</LinearLayout>